welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:4: error: Unit does not take parameters
def fairV() {avance();marquerSol();avance();gauche();avance();
                                ^PictureMono:5: error: Unit does not take parameters
             marquerSol();recule();droite();avance();marquerSol();
                       ^PictureMono:5: error: Unit does not take parameters
             marquerSol();recule();droite();avance();marquerSol();
                                                               ^PictureMono:9: error: not found: value faireV
	faireV();
        ^